Fixed display bugs caused by renamed DB object attributes Changed text editor layout (WIP) Tweaked NavBar spacing

--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -30,5 +30,5 @@ body {
 
 /*Custom*/
 .navbar-offset{
-	margin-top: 75px !important;
+	margin-top: 70px !important;
 }
